# biasx-experiment

./: .gitignore  Makefile  README.md  app.py  main.py  pyproject.toml  requirements.txt
app/: results_page.py  results_ui.py  settings_page.py  settings_ui.py
scripts/: 01_initial_model_training.py  02_class_activation_mapping.py  03_cam_granularity_experiment.py  04_visualize_model_architecture.py  05_outcome_bias_training.py  05_prediction_fairness_training.py  06_attention_fairness_training.py  06_feature_bias_training.py
src/: __init__.py  analyzer.py  dataset.py  definitions.py  explainer.py  model.py  runner.py  settings.py  utils.py
